--- a/episodes/06-pyramid-example.Rmd
+++ b/episodes/06-pyramid-example.Rmd
@@ -14,9 +14,9 @@ rendered lesson content that would be made by a pull request.
 
 ```{r pyramid, fig.alt = "pie chart illusion of a pyramid", fig.cap = "Sun arise each and every morning"}
 pie(
-  c(Sky = 78, "Sunny side of pyramid" = 17, "Shady side of pyramid" = 5), 
+  c(Night = 78, "Sunny side of pyramid" = 17, "Blue side of pyramid" = 5), 
   init.angle = 315, 
-  col = c("deepskyblue", "yellow", "yellow3"), 
+  col = c("black", "yellow", "blue"), 
   border = FALSE
 )
 ```
